2003-01-04  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* NEWS: Added a note for Morten's contribution to 1.0.12.

2003-01-03  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* Release 1.0.12

2003-01-02  Morten Welinder  <terra@diku.dk>

	* src/mathfunc.c (mdeterm): Simple-minded fix for singular
	matrices.

2002-12-20  Jody Goldberg <jody@gnome.org>

	* src/value.c (value_new_string_nocopy) : backport.

	* src/xml-io.c : remove patch from 2002-11-24, and use _really_ big
	  buffers to ameliorate the worst of the libxml1 bug.  Using libxml2
	  parser is not feasbile with non-utf8 internals.

	Back port small stf cleanup.
	* src/stf-parse.c (stf_parse_sheet) : use cell_set_value and simplify.

	* src/clipboard.c (paste_cell) : fix leak.

2002-12-16  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=101204
	* src/analysis-tools.c (cb_cut_into_rows) : backport at patch
	(cb_cut_into_cols) : ditto.

2002-12-12  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* configure.in, NEWS: Post release version bump.

2002-12-12  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* Release 1.0.11

2002-12-08  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* Makefile.am: Dropped config.rpath from EXTRA_DIST - it's nowhere to
	be found. Added the intltool .in scripts to EXTRA_DIST so they're 
	available in the distcheck tree.
	* Makefile.am, configure.in: Use the macros dir rather than the m4 one.

2002-11-24  Jody Goldberg <jody@gnome.org>

	* src/xml-io.c (gnumeric_xml_read_workbook) : Use the new parser
	  as suggested by Daniel.

2002-11-22  Jody Goldberg <jody@gnome.org>

	* src/sheet-control-gui.c (scg_setup_group_buttons) : fix ungrouping.

2002-11-21  Jody Goldberg <jody@gnome.org>

	* src/colrow.c (colrow_get_global_outline) : new.

	* src/commands.c (cmd_colrow_hide_correct_selection) : just in case,
	  don't reset the selection unless we are going to set it to something.
	(cmd_colrow_hide_undo) : convert from elements+flag -> 2 lists.
	(cmd_colrow_hide_redo) : ditto.