@@ -1,6 +1,7 @@
 Gnumeric 1.0.13
 
-
+Morten
+	* Use even blunter instrument on xml importer.
 
 --------------------------------------------------------------------------
 Gnumeric 1.0.12
